--- a/Views/PI/BusquedaAvanzada.cshtml
+++ b/Views/PI/BusquedaAvanzada.cshtml
@@ -305,7 +305,39 @@
                 <div class="panel-content ctm-panel-content">
                     <div id="cTabla" style="overflow-x:auto;">
                         <table id="cTabla1_3" class="table table-bordered table-hover table-striped w-100">
-                            <thead></thead>
+                            <thead>
+                                <tr style="background-color:#254368;color:white;" align="center">
+                                    <th>Tipo de Solicitud</th>
+                                    <th>Nombre</th>
+                                    <th>Empresa Propietaria</th>
+                                    <th>Enpresa Anterior</th>
+                                    <th>Fecha Legal</th>
+                                    <th>Fecha de Vencimiento</th>
+                                    <th>Fecha de Concesión</th>
+                                    <th>No. Registro</th>
+                                    <th>Pais</th>
+                                    <th>Clase</th>
+                                    <th>Estatus</th>
+                                    <th>Uso</th>
+                                    <th>No. Solicitud</th>
+                                    <th>Tipo de Registro</th>
+                                    <th>Persona que Solicito Registro</th>
+                                    <th>Despacho</th>
+                                    <th>Corresponsal</th>
+                                    <th>Licencia</th>
+                                    <th>Persona que Solicito Licencia</th>
+                                    <th>Cesión</th>
+                                    <th>Persona que Solicito Cesión</th>
+                                    <th>Fecha de Requerimiento del Negocio</th>
+                                    <th>Fecha de Instrucciones al Corresponsal</th>
+                                    <th>Fecha de Solicitud de Registro Ante la Autoridad Competente</th>
+                                    <th>Fecha de Solicitud de Busqueda</th>
+                                    <th>Fecha de Información de Resultados al Negocio</th>
+                                    <th>Fecha Comprobación de Uso</th>
+                                    <th>Fecha Declaración de Uso</th>
+                                </tr>
+
+                            </thead>
                             <tbody></tbody>
                         </table>
                     </div>
