--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -156,7 +156,8 @@ ViewBag.ul.roles.id == "a78f7e2f-69af-43aa-9e41-4df768bf24b1"
                         </div>
                     </div>
                     <div class="col-md-3">
-                        <div class="ctm-graph-box" box="01">
+                        @*<div class="ctm-graph-box" box="01">*@
+                        <div class="ctm-graph-box" style="background-color:#2d34fa; ">
                             <div class="ctm-graph-box-header">
                                 <div class="ctm-graph-box-info">
                                     <h4>Solicitudes Pendientes de Otorgar Concesión</h4>
@@ -164,19 +165,19 @@ ViewBag.ul.roles.id == "a78f7e2f-69af-43aa-9e41-4df768bf24b1"
                                 </div>
                             </div>
                             @*<div class="ctm-graph-box-footer">
-                                    <div class="ctm-graph-box-item filtrado" filtrado="021">
-                                        <div class="ctm-graph-box-info">
-                                            <h4>En tiempo</h4>
-                                            <h3>@Html.Raw(ViewBag.indicadores.envalidacionA_et)</h3>
-                                        </div>
-                                    </div>
-                                    <div class="ctm-graph-box-item filtrado" filtrado="022">
-                                        <div class="ctm-graph-box-info">
-                                            <h4>Vencidas</h4>
-                                            <h3>@Html.Raw(ViewBag.indicadores.envalidacionA_v)</h3>
-                                        </div>
-                                    </div>
-                                </div>*@
+                <div class="ctm-graph-box-item filtrado" filtrado="021">
+                    <div class="ctm-graph-box-info">
+                        <h4>En tiempo</h4>
+                        <h3>@Html.Raw(ViewBag.indicadores.envalidacionA_et)</h3>
+                    </div>
+                </div>
+                <div class="ctm-graph-box-item filtrado" filtrado="022">
+                    <div class="ctm-graph-box-info">
+                        <h4>Vencidas</h4>
+                        <h3>@Html.Raw(ViewBag.indicadores.envalidacionA_v)</h3>
+                    </div>
+                </div>
+            </div>*@
                         </div>
                     </div>
                     <div class="col-md-3">
@@ -233,7 +234,8 @@ ViewBag.ul.roles.id == "a78f7e2f-69af-43aa-9e41-4df768bf24b1"
             <h5 class="ctm-graph-box-title">En esta sección podrás visualizar solicitudes en tiempo y vencidas</h5>
             <div class="row">
                 <div class="col-md-6">
-                    <div class="ctm-graph-box" box="03">
+                    @*<div class="ctm-graph-box" box="03">*@
+                    <div class="ctm-graph-box" style="background-color:#f39c12;">
                         <div class="ctm-graph-box-header">
                             <div class="ctm-graph-box-info">
                                 <h4>Vencimientos con Fecha de Vencimiento</h4>
@@ -285,7 +287,8 @@ ViewBag.ul.roles.id == "a78f7e2f-69af-43aa-9e41-4df768bf24b1"
             <h5 class="ctm-graph-box-title">En esta sección podrás visualizar el total de solicitudes por rubro</h5>
             <div class="row">
                 <div class="col-md-3">
-                    <div class="ctm-graph-box" style="background-color:#254368;">
+                    @*<div class="ctm-graph-box" box="02">*@
+                    <div class="ctm-graph-box" style="background-color:#616a6b;">
                         <div class="ctm-graph-box-header">
                             <div class="ctm-graph-box-info">
                                 <a href="/PI/RegistroMarcas?tipo=1" title="Link title" style="color:#FFFFFF">
@@ -297,7 +300,7 @@ ViewBag.ul.roles.id == "a78f7e2f-69af-43aa-9e41-4df768bf24b1"
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <div class="ctm-graph-box" box="02">
+                    <div class="ctm-graph-box" style="background-color:#616a6b;">
                         <div class="ctm-graph-box-header">
                             <div class="ctm-graph-box-info">
                                 <a href="/PI/RegistroMarcas?tipo=2" title="Link title" style="color:#FFFFFF">
@@ -309,7 +312,8 @@ ViewBag.ul.roles.id == "a78f7e2f-69af-43aa-9e41-4df768bf24b1"
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <div class="ctm-graph-box" box="02">
+                    <div class="ctm-graph-box" style="background-color: #5dade2;">
+                        
                         <div class="ctm-graph-box-header">
                             <div class="ctm-graph-box-info">
                                 <a href="/PI/RegistroMarcas?tipo=3" title="Link title" style="color:#FFFFFF">
@@ -321,7 +325,7 @@ ViewBag.ul.roles.id == "a78f7e2f-69af-43aa-9e41-4df768bf24b1"
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <div class="ctm-graph-box" box="02">
+                    <div class="ctm-graph-box" style="background-color: #5dade2;">
                         <div class="ctm-graph-box-header">
                             <div class="ctm-graph-box-info">
                                 <a href="/PI/RegistroMarcas?tipo=4" title="Link title" style="color:#FFFFFF">
@@ -333,7 +337,7 @@ ViewBag.ul.roles.id == "a78f7e2f-69af-43aa-9e41-4df768bf24b1"
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <div class="ctm-graph-box" box="06">
+                    <div class="ctm-graph-box" style="background-color: #5dade2;">
                         <div class="ctm-graph-box-header">
                             <div class="ctm-graph-box-info">
                                 <a href="/PI/RegistroMarcas?tipo=5" title="Link title" style="color:#FFFFFF">
@@ -345,7 +349,7 @@ ViewBag.ul.roles.id == "a78f7e2f-69af-43aa-9e41-4df768bf24b1"
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <div class="ctm-graph-box" box="06">
+                    <div class="ctm-graph-box" style="background-color: #5dade2;">
                         <div class="ctm-graph-box-header">
                             <div class="ctm-graph-box-info">
                                 <a href="/PI/RegistroMarcas?tipo=6" title="Link title" style="color:#FFFFFF">
@@ -357,7 +361,7 @@ ViewBag.ul.roles.id == "a78f7e2f-69af-43aa-9e41-4df768bf24b1"
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <div class="ctm-graph-box" box="06">
+                    <div class="ctm-graph-box" box="05">
                         <div class="ctm-graph-box-header">
                             <div class="ctm-graph-box-info">
                                 <a href="/PI/RegistroMarcas?tipo=7" title="Link title" style="color:#FFFFFF">
@@ -369,7 +373,7 @@ ViewBag.ul.roles.id == "a78f7e2f-69af-43aa-9e41-4df768bf24b1"
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <div class="ctm-graph-box" box="06">
+                    <div class="ctm-graph-box" box="05">
                         <div class="ctm-graph-box-header">
                             <div class="ctm-graph-box-info">
                                 <a href="/PI/RegistroMarcas?tipo=8" title="Link title" style="color:#FFFFFF">
