--- a/Views/PI/BusquedaAvanzada.cshtml
+++ b/Views/PI/BusquedaAvanzada.cshtml
@@ -99,13 +99,13 @@
 <input type="hidden" name="tipo_registro" id="tipo_registro" value="0">
 
 <div class="row">
-    <div class="col-md-1">
+    <p>
         <button class="btn btn-info btn-block waves-effect waves-themed collapsed" type="button" data-toggle="collapse" data-target="#collapsefiltro" aria-expanded="false" aria-controls="collapsefiltro">Filtros</button>
-    </div>
-    <div class="row collapse" id="collapsefiltro">
+    </p>
+    <div class="row collapse in show" id="collapsefiltro">
         <div class="col-md-3">
             <div class="form-group" id="uu_02_c">
-                <label for="uu_02">Tipo de solicitud <font size="4" style="color:#FF0000"> * </font></label>
+                <label for="uu_02">Tipo de solicitud</label>
                 <select class="select2 form-control input-sm custom-select" id="uu_02" autocomplete="off" style="width: 100%;">
                     @*<option value="0" disabled selected>Seleccione una opción</option>*@
                     @foreach (TipoSolicitud item in ViewBag.tipo_solicitud)
@@ -289,8 +289,10 @@
                 </div>
             </div>*@
         <div class="col-md-4">
-            <div class="form-group">
-                <label></label>
+           <div class="form-group">
+                <div class="form-group">
+                    <label></label>
+                </div>
                 <div class="custom-control custom-checkbox">
                     <input type="checkbox" class="custom-control-input" id="chektodo">
                     <label class="custom-control-label" for="chektodo" id="chektodo_l">Todas las columnas</label>
