--- a/Views/Shared/_aside.cshtml
+++ b/Views/Shared/_aside.cshtml
@@ -55,10 +55,19 @@
             {
                 <li class="" data-filter-tags="Inicio Portal Propiedad Intelectual">
                     @*<a href="~/PI/Index" title="Inicio" data-filter-tags="Inicio Portal Propiedad Intelectual">*@
-                    <a href="~/Admin" title="Inicio" data-filter-tags="Inicio Portal Propiedad Intelectual">
-                    @*<a href="~/PI" title="Inicio" data-filter-tags="Inicio Portal Propiedad Intelectual">*@
+                    @*<a href="~/Admin" title="Inicio" data-filter-tags="Inicio Portal Propiedad Intelectual">*@
+                    <a href="~/PI" title="Inicio" data-filter-tags="Inicio Portal Propiedad Intelectual">
                         <i class='fa fa-home'></i>
                         <span class="nav-link-text" data-i18n="Inicio Portal Propiedad Intelectual">Inicio</span>
+                    </a>
+                </li>
+            }
+            @if (accesos.adm_dashboard)
+            {
+                <li class="" data-filter-tags="Dashboard">
+                    <a href="~/Admin" title="Dashboard" data-filter-tags="Dashboard">
+                        <i class='fa fa-clipboard-check'></i>
+                        <span class="nav-link-text" data-i18n="Dashboard">Dashboard</span>
                     </a>
                 </li>
             }
