--- a/Views/PI/BusquedaAvanzada.cshtml
+++ b/Views/PI/BusquedaAvanzada.cshtml
@@ -302,7 +302,7 @@
         </div>
         <div class="col-md-12 text-center">
             @*<button type="button" class="btn btn-default waves-effect waves-themed" onclick="window.location = '/PI/RegistroMarcas?tipo=1';" id="btnCancelar"><i class="fa fa-ban"></i> Cancelar</button>*@
-            <button type="button" class="btn btn-default waves-effect waves-themed" onclick="Limpiar();" id="btnCancelar"><i class="fa fa-ban"></i> Limpiar</button>
+            <button type="button" class="btn btn-danger waves-effect waves-themed" onclick="Limpiar();" id="btnCancelar"><i class="fa fa-eraser"></i> Limpiar</button>
             <button type="button" class="btn btn-info" onclick="BuscarRegistroMarca();" id="btnBuscar"><i class="fa fa-search"></i> Buscar</button>
             @*<a type="button" class="btn btn-info" href="~/PI/BusquedaAvanzada?tipo=1" id="btnBuscar"><i class="fa fa-search"></i> Buscar</a>*@
             <button type="button" class="btn btn-success" onclick="Excel();" id="btnGenerar"><i class="fa fa-file-excel"></i> Generar</button>
